<resources>
    <string name="app_name">TriviaQuiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_label">Start Trivia</string>
    <string name="create_quiz_label">Create Quiz Question</string>
    <string name="delete_questions_label">Delete all my Questions</string>
    <string name="exit_label">Exit</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="select_image_label">Select Image</string>
    <string name="type_question_label">Type Question here</string>
    <string name="option_here_label">Type option here</string>
    <string name="submit_button_label">Submit</string>
    <string name="title_activity_trivia">TriviaActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="results_label">Trivia Results</string>
    <string name="correct_answers_label">Correct Answers</string>
    <string name="results_text_label">Try again and see if you can get all the correct answers!</string>
    <string name="quit_label">Quit</string>
    <string name="try_again_label">Try again</string>
    <string name="question_label">Q1</string>
    <string name="loading_image_label">Loading Image..</string>
</resources>
