<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chandra.triviaquiz.CreateQuestionActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageUpload"
        android:text="@string/select_image_label"
        android:layout_gravity="center"
        android:onClick="uploadImage"/>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/image"
        android:layout_gravity="center"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_question_label"
        android:id="@+id/questionText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/option_here_label"
        android:layout_weight="1"
        android:id="@+id/options"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus_grey600_24dp"
        android:background="@null"
        android:onClick="addOption"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit_button_label"
        android:onClick="onSubmit"
        android:layout_gravity="center"/>

</LinearLayout>
